			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: Unicode support for environment variables (non-Windows version).

  * FIXED: Unicode handling of commandline arguments.

  * FIXED: Bug#56: UNICODE handling for shell/1 and win_exec/2.  Dmitry.

  * FIXED: absolute_file_name/2 and friends for UNICODE filenames on
    windows platforms.

  * FIXED: Bug#59: seek/4 on output streams.  Holger Kanwischer.


VERSION 5.5.19 (May 24, 2005)
=============================

  * ADDED: PL_query(PL_QUERY_USER_CPU) to get portable CPU statistics.


VERSION 5.5.18 (May 20, 2005)
=============================

  * FIXED: Bug#44 ?=(X,Y) in when/2.  Roy Haddad and Tom Schrijvers.


VERSION 5.5.17 (May 09, 2005)
=============================

  * PORT: Bug#43: remove / after $(DESTDIR) to avoid paths starting
    with //.  Causes problems on Cygwin.  Dmitry.

  * MODIFIED: Allow for goal_expansion/2 on named meta-predicates.

  * FIXED: nb_setarg/3 using float arguments.

  * FIXED: setarg/nb_setarg allows to overwrite the functor using Index
    = 0.

  * ENHANCED: do 1st argument indexing on floats.

  * PORT: Prefer library ncursesw.  Unclear what this means, but might
    solve some issues on MacOS X.

  * FIXED: Bug#40: Unable to `ungetc' multibyte codes under some 
    circumstances.  Grzegorz Chrupala.

  * FIXED: Bug#38: incorrect spacing in write_term on Unicode characters.
    Dmitry.


VERSION 5.5.16 (May 02, 2005)
=============================

  * FIXED: hash_term/2: various problems handling compound terms:
    instable results, undefined results on terms with shared
    subterms.  Hugo Ferreira.

  * FIXED: PL_new_atom_wchars() did not canonise the atom representation,
    so PL_new_atom_wchars(2, L"nl") != PL_new_atom_nchars(2, "nl").  Paul